--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <title>The Last of Us</title>
 </head>
 <body>
-  <header>
-    <img src="images/hbo logo.svg" width="200">
+  <header role="banner">
+    <img src="images/hbo-logo.svg" width="200">
 
-    <nav>
+    <nav role="navigation" id="nav">
       <ul>
-        <li><a href="#">About the Show</a></li>
-        <li><a href="#">Featured Characters</a></li>
+        <li><a href="#nav">About the Show</a></li>
+        <li><a href="#main">Featured Characters</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
+  <main role="main" id="main">
     <section>
         <img src="images/the-last-of-us.jpeg" alt="Two main characters of the Last of Us" width="800"/>
         
@@ -35,36 +35,36 @@
 
       <article>
         <h3>Joel</h3>
-        <img src="images/joel-512x512.webp" alt="" />
+        <img src="images/joel-512x512.webp" alt="Joel posing for camera looking off into distance" />
         <p>A hardened survivor, tormented by past trauma and failure, who must trek across a pandemic-ravaged America, all the while protecting a girl who represents the last hope of humanity.</p>
-        <a href="#">Read more</a>
+        <a href="#" aria-label="Read more about Joel, a hardended survivor">Read more</a>
       </article>
 
       <article>
-        <h4>Ellie</h4>
-        <img src="ellie-512x512.webp" alt="" />
+        <h3>Ellie</h3>
+        <img src="images/ellie-512x512.webp" alt="Ellie posing for camera starring directly at camera" />
         <p>A 14-year old orphan who has never known anything but a ravaged planet, struggles to balance her instinct for anger and defiance with her need for connection and belonging… as well as the newfound reality that she may be the key to saving the world.</p>
-        <a href="#">Read more</a>
+        <a href="#" aria-label="Read more about Ellie, a 14 year-old orphan">Read more</a>
       </article>
 
       <article>
-        <h5>Marlene</h5>
-        <img src="images/marlene-512x512.webp" alt="" />
+        <h3>Marlene</h3>
+        <img src="images/marlene-512x512.webp" alt="Marlene dramaticly looking down at the floor" />
         <p>Leader of the Fireflies, a resistance movement struggling for freedom against an oppressive military regime. (Dandridge voiced the Marlene character in “The Last of Us” and “The Last of Us Part II” video games.)</p>
-        <a href="#">Read more</a>
+        <a href="#" aria-label="Read more about Marlene, leader of the fireflies">Read more</a>
       </article>  
 
       <article>
-          <h6>Tommy</h6>
-          <img src="images/tommy-512x512.webp" alt="" />
+          <h3>Tommy</h3>
+          <img src="images/tommy-512x512.webp" alt="Tommy looking off into the distance holding a rifle" />
           <p>Joel’s younger brother, a former soldier who hasn’t lost his sense of idealism and hope for a better world.</p>
-          <a href="#">Read more</a>
+          <a href="#"aria-label="Read more about Tommy, Joel's younger brother">Read more</a>
       </article>
 
     </section>
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <p><small>&copy HBO 2023</small></p>
   </footer>
 </body>
