--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <article>
         <h3>Marlene</h3>
-        <img src="images/marlene-512x512.webp" alt="Marlene dramaticly looking down at the floor" />
+        <img src="images/marlene-512x512.webp" alt="Marlene dramaticly looking down at the floor in deep thought" />
         <p>Leader of the Fireflies, a resistance movement struggling for freedom against an oppressive military regime. (Dandridge voiced the Marlene character in “The Last of Us” and “The Last of Us Part II” video games.)</p>
         <a href="#" aria-label="Read more about Marlene, leader of the fireflies">Read more</a>
       </article>  
